# f1-realtime-strategy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_predictions_schema.sql  002_live_schema.sql  003_comparisons_schema.sql  004_lap_residual_stddev.sql  005_lap_residual_pk_forecast.sql
notebooks/: 01_baseline_degradation.ipynb  02_montecarlo_validation.ipynb
realtime/: config.py  db.py
realtime/api/: main.py
realtime/api/routes/: compare.py  live.py  next_event.py  strategy.py
realtime/api/static/: style.css
realtime/api/templates/: base.html  compare.html  compare_index.html  live.html  next_event.html  strategy.html
realtime/compare/: residuals.py
realtime/ingest/: fastf1_session.py  livetiming_worker.py  schedule.py  undercut_connector.py
realtime/predict/: allocation.py  degradation.py  model.py  weather.py
realtime/simulate/: montecarlo.py  pitloss.py  strategy.py
tests/: test_compare_residuals.py  test_degradation_predictor.py  test_montecarlo.py
