[project]
name = "f1-realtime-strategy"
version = "0.1.0"
description = "F1 live strategy predictor — FastAPI + HTMX + Redis + Postgres"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "fastf1>=3.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "redis>=5.0",
    "httpx>=0.27",
    "plotly>=5.20",
    "python-multipart>=0.0.9",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["realtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
